<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:src="@drawable/logo"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/code"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:id="@+id/edtCode"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/user"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:gravity="center"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/edtUser"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignRight="@id/edtUser"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/user" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/pass"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:gravity="center"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/edtPassword"
                    android:inputType="textPassword"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/lock"
                    android:layout_alignRight="@id/edtPassword"
                    android:layout_marginTop="15dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:text="@string/forgotPass"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:id="@+id/txtForgotPass" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:id="@+id/txtNoti"
                android:textColor="@android:color/white"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/bgr_button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:id="@+id/loadLogin"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>