<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imgUserCmtReply"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bgr_llcmt"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserCmtReply"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>
            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtContentCmtReply"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:colorClickableText="@android:color/darker_gray"
                app:trimCollapsedText="@string/viewmore"
                app:trimExpandedText="@string/showless"
                app:trimMode="trimModeLength"
                app:trimLength="30"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:id="@+id/txtTimeCmtReply"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:id="@+id/txtLikeCmtReply"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>