<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imgUserCmt"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bgr_llcmt"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/txtUserCmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtContentCmt"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:colorClickableText="@android:color/darker_gray"
                app:trimCollapsedText="@string/viewmore"
                app:trimExpandedText="@string/showless"
                app:trimMode="trimModeLength"
                app:trimLength="30"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/txtTimeCmt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/gray"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:id="@+id/txtLikeCmt"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply"
                android:id="@+id/txtReply"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/txtSeemoreCmt"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/llReplyCmt1"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgUserCmtReply1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserCmtReply1"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtContentCmtReply1"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/llReplyCmt2"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgUserCmtReply2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserCmtReply2"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtContentCmtReply2"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/llReplyCmt3"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgUserCmtReply3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserCmtReply3"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtContentCmtReply3"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>